<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_now"
            android:icon="@drawable/icon_now_mini"
            android:title="@string/menu_now" />
        <item
            android:id="@+id/nav_forecast"
            android:icon="@drawable/icon_forecast_mini"
            android:title="@string/menu_gallery" />
    </group>

    <item android:title="@string/info">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_developer"
                    android:icon="@drawable/icon_developer_mini"
                    android:title="@string/menu_developer" />
                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/icon_feedback_mini"
                    android:title="@string/menu_feedback" />
            </group>
        </menu>
    </item>

</menu>
