<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:textColor="@android:color/white"
            android:text="@string/environment"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                android:text="@string/temp_environment_title"/>
            <TextView
                android:id="@+id/inputTempText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/dynamicColor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                android:text="@string/humid_environment_title"/>
            <TextView
                android:id="@+id/inputHumidText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/dynamicColor"/>

        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/temper_telephone"
            tools:ignore="ContentDescription" />
    </LinearLayout>

</LinearLayout>