<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="16dp"
        card_view:cardBackgroundColor="@android:color/transparent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/white"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="8dp">
                <TextView
                    android:id="@+id/textTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/dynamicColor"/>
                <TextView
                    android:textColor="@color/dynamicColor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/temper_grad"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="8dp">
                <TextView
                    android:id="@+id/textPress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/dynamicColor"/>
                <TextView
                    android:textColor="@color/dynamicColor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/pres_mm"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp">
                <TextView
                    android:id="@+id/textCloud"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/dynamicColor"/>
                <TextView
                    android:textColor="@color/dynamicColor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cloud"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>